--- a/styles/base.css
+++ b/styles/base.css
@@ -241,7 +241,7 @@ img.icon, figure.icon {
 
 	thead {
 		all: revert;
-		background: var(--bf-text-color-blue);
+		background: var(--bf-color-border-blue);
 		color: var(--bf-text-color-white);
 		th {
 			padding-block: 3px;
