--- a/styles/editor.css
+++ b/styles/editor.css
@@ -30,6 +30,11 @@
 	}
 }
 
+.black-flag.app prose-mirror {
+	--color-control-bg: #d9d8c8;
+	--menu-background: rgba(0 0 0 / .1);
+}
+
 .black-flag prose-mirror {
 	.editor-container {
 		scrollbar-width: thin;
